# macos-UnifiedLogs

./: .gitignore  Cargo.toml
benches/: big_sur_benchmark.rs  high_sierra_benchmark.rs  monterey_benchmark.rs
examples/unifiedlog_parser/src/: main.rs
src/: catalog.rs  chunkset.rs  dsc.rs  filesystem.rs  header.rs  iterator.rs  lib.rs  message.rs  parser.rs  preamble.rs  specs.md  specs.rs  specs_update.sh  timesync.rs  traits.rs  unified_log.rs  util.rs  uuidtext.rs
src/chunks/: oversize.rs  simpledump.rs  statedump.rs
src/chunks/firehose/: activity.rs  firehose_log.rs  flags.rs  message.rs  nonactivity.rs  signpost.rs  trace.rs
src/decoders/: bool.rs  config.rs  darwin.rs  decoder.rs  dns.rs  location.rs  network.rs  opendirectory.rs  time.rs  uuid.rs
tests/: big_sur_tests.rs  high_sierra_tests.rs  monterey_tests.rs
