[package]
name = "macos-unifiedlogs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
lz4_flex = "0.11.3"
byteorder = "1.5.0"
plist = { workspace = true }
regex = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
simplelog = "0.12.2"
csv = { workspace = true }
chrono = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "high_sierra_benchmark"
harness = false

[[bench]]
name = "big_sur_benchmark"
harness = false

[[bench]]
name = "monterey_benchmark"
harness = false
