[package]
name = "macos-unifiedlogs"
version = "0.1.2"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/mandiant/macos-unifiedlogs"
description = "A library to help parse macOS UnifiedLogs"
keywords = ["forensics", "macOS", "unifiedlog"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "8.0.0"
serde_json = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
lz4_flex = "0.11.3"
byteorder = "1.5.0"
plist = { workspace = true }
regex = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
walkdir = "2.5.0"
sunlight = "0.1.1"

[dev-dependencies]
simplelog = "0.12.2"
csv = { workspace = true }
chrono = { workspace = true }
criterion = { workspace = true }
anyhow = { workspace = true }
test-case = { workspace = true }

[[bench]]
name = "high_sierra_benchmark"
harness = false

[[bench]]
name = "big_sur_benchmark"
harness = false

[[bench]]
name = "monterey_benchmark"
harness = false
